# GenVideoAI

./: .gitignore  LICENSE  README.md
api-gateway/: main.py
api-gateway/docs/: api-gateway.md
api_gateway/: Dockerfile  main.py  pyproject.toml
assets/: README.md
assets-service/: docker-compose.yml
assets/docs/: assets.md
assets_service/: Dockerfile  docker-compose.yml  pyproject.toml
assets_service/src/saver/: s3_saver.py
assets_service/src/tests/: test.py
broker/: Dockerfile  README.md  pyproject.toml
broker/docs/: broker.md
cache/: README.md  pyproject.toml
cache/docs/: cache.md
db/: Dockerfile  README.md  pyproject.toml
db/docs/: db.md
docs/: Dockerfile  Main Pipeline.canvas  Main.md  Main_Pipeline.canvas  Project.md  Shot.md  pyproject.toml
dto/: Dockerfile  pyproject.toml
dto/src/: dto.py
dto/src/scenario_dto/: dto.py
dto/tests/: test_storyboard.py
image-service/: generator.py
image-service/docs/: image-service.md
image-service/src/open_ai/: ans.yaml  image_generator.py  test.py
image-service/src/test_images/: upscale3.py
image_service/: pyproject.toml
image_service/src/open_ai/: ans.yaml  image_generator.py  test.py
image_service/src/test_images/: fix_import.py  test_stable_df.py  test_stable_df2.py  test_stable_df3.py
observability/: Dockerfile  README.md  pyproject.toml
observability/docs/: observability.md
orchestrator/: Dockerfile  pyproject.toml  worker.py
orchestrator/docs/: orchestrator.md
render-service/src/tests/hand_render/: test.py
render-service/src/tests/tests_moviepy/: test.py
render_service/: pyproject.toml
render_service/src/tests/hand_render/: test.py
render_service/src/tests/tests_moviepy/: test.py
scenario-service/: README.md  mkdocs.yml  pyproject.toml
scenario-service/docs/: api.md  scenario-service.md
scenario-service/src/entities/: entities.py  styles.yml
scenario-service/src/gpt_api/: chatgpt_api.py
scenario-service/src/scenarist/: scenarist.py
scenario-service/tests/: test_chat_gpt.py
scenario_service/: Dockerfile
scenario_service/docs/: Episode.md  Sequence.md
scenario_service/src/entities/: styles.yml
scenario_service/tests/: test_chat_gpt.py
tts-service/: README.md  generator.py
tts-service/docs/: tts-service.md
tts-service/src/hugging_face/: tts_test_HuggingFace.py
tts-service/src/silero/: silero.py
tts-service/src/test_tts/silero/: silero.py
tts-service/src/tts_processors/: silero_tts_processor.py
tts-service/src/xtts/: test_xtts.py
tts_service/: Dockerfile  pyproject.toml
tts_service/docs/: tts-service.md
tts_service/src/test_tts/hugging_face/: tts_test_HuggingFace.py
tts_service/src/test_tts/mmsttsrus/: test_mmsttsrus.py
tts_service/src/test_tts/silero/: silero.py
tts_service/src/test_tts/xtts/: test_xtts.py
tts_service/src/tts_processors/: silero_tts_processor.py
video-composer/: composer.py
video-composer/docs/: video-composer.md
