[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-gateway"
version = "0.1.0"
description = "FastAPI entrypoint for orchestrating GenVideoAI services"
authors = [{ name = "GenVideoAI Team", email = "team@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<0.28",
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.5,<0.6",
]

[tool.setuptools]
packages = ["api_gateway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
