[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "genvideo-broker"
version = "0.1.0"
description = "Configuration and tooling for the RabbitMQ message broker"
authors = [{ name = "GenVideoAI Team", email = "team@example.com" }]
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.4,<10.0",
    "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
]
