[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "genvideo-db"
version = "0.1.0"
description = "Database schema tooling and migrations for GenVideoAI"
authors = [{ name = "GenVideoAI Team", email = "team@example.com" }]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13,<2.0",
    "asyncpg>=0.29,<1.0",
]

[project.optional-dependencies]
dev = [
    "psycopg[binary]>=3.1,<4.0",
]
