[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "genvideo-dto"
version = "0.1.0"
description = "Shared DTO models"
authors = ["You <you@example.com>"]
readme = "README.md"
packages = [{ include = "dto", from = "src" }]  # <-- key line

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-mock = "^3.14"

[tool.pytest.ini_options]
testpaths = ["dto/tests"]
addopts = "-q"
