[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "render-service"
version = "0.1.0"
description = "Video rendering helpers"
authors = [{ name = "GenVideoAI Team", email = "team@example.com" }]
requires-python = ">=3.12"
dependencies = [
    "moviepy>=1.0,<2.0",
    "numpy>=1.26,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "ruff>=0.5,<0.6",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
