[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-service"
version = "0.1.0"
description = "Text-to-speech helpers for GenVideoAI"
authors = [{ name = "GenVideoAI Team", email = "team@example.com" }]
requires-python = ">=3.12"
dependencies = [
    "gTTS>=2.5,<3.0",
    "pydub>=0.25,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "ruff>=0.5,<0.6",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
